# Vita_SpaceInvaders

./: CMakeLists.txt  README.MD
Container/: container.c  container.h
Defines/: defines.h
Figures/: alien.c  alien.h  bomb.c  bomb.h  rocket.c  rocket.h  ship.c  ship.h
Font/: text.c  text.h
Scene/: scene.c  scene.h
Sound/: sound.c  sound.h
src/: app.c  app.h  main.c
